--- a/assets/styles.css
+++ b/assets/styles.css
@@ -119,3 +119,8 @@ input::placeholder{color:#6d8595}
 main, header, footer{display:block}
 main > *, .section > *, .panel > *{margin-left:auto;margin-right:auto}
 .text-center,.center{text-align:center !important}
+
+/* Even smaller ERD option */
+.erd-xxs {
+  max-width: 420px;   
+}
